Rename options --output-xml-fragment and --output-xml-raw to --output-xml-outer and --output-xml-inner respectively

--- a/doc/manpage/CMakeLists.txt
+++ b/doc/manpage/CMakeLists.txt
@@ -45,9 +45,9 @@ set(ARCHIVE_FLAG_SHORT "r")
 set(ARCHIVE_FLAG_LONG "archive")
 set(OUTPUT_XML_FLAG_LONG "output-xml")
 set(OUTPUT_XML_FLAG_SHORT "X")
-set(OUTPUT_XML_FRAGMENT_FLAG_LONG "output-xml-fragment")
+set(OUTPUT_XML_FRAGMENT_FLAG_LONG "output-xml-outer")
 set(OUTPUT_XML_FRAGMENT_FLAG_SHORT "F")
-set(OUTPUT_XML_RAW_FLAG_LONG "output-xml-raw")
+set(OUTPUT_XML_RAW_FLAG_LONG "output-xml-inner")
 set(OUTPUT_XML_RAW_FLAG_SHORT "R")
 set(POSITION_FLAG_LONG "position")
 set(TABS_FLAG "tabs")
