--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -114,21 +114,21 @@ the output will be in the proper format, but these allow you to specify.
 This is the default when the input is source
 code or files containing source code.
 
-`-${OUTPUT_XML_FRAGMENT_FLAG_SHORT}`,`--${OUTPUT_XML_FRAGMENT_FLAG_LONG}`
-: Output srcML as an archive fragment. This does not include
-the namespaces declared on the archive root element, so is technically not valid XML.
+`-${OUTPUT_XML_FRAGMENT_FLAG_LONG}`
+: Output srcML as an inner unit. This does not include
+the namespaces declared on the archive root element, and may not have a root element, so is technically not valid XML.
 
-`-${OUTPUT_XML_RAW_FLAG_SHORT}`,`--${OUTPUT_XML_RAW_FLAG_LONG}`
+`-${OUTPUT_XML_RAW_FLAG_LONG}`
 : Output the XML inside of the srcML unit element. This is not valid XML as it contains no
 namespace declarations and does not necessarily have a single root element.
 
 ### Examples
 
-srcml --text="a;" -l C++ --output-xml-fragment
+srcml --text="a;" -l C++ --output-xml-outer
 
 ```<unit revision="1.0.0" language="C++"><expr_stmt><expr><name>a</name></expr>;</expr_stmt></unit>```
 
-srcml --text="a;" -l C++ --output-xml-raw
+srcml --text="a;" -l C++ --output-xml-inner
 
 ```<expr_stmt><expr><name>a</name></expr>;</expr_stmt>```
 
