--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
         - run: cd build && make && make install && ldconfig
         - run: ln -s build/bin bin
         - run: cd test/parser/testsuite && make -f Makefile.gen
-        - run: cd test/parser && ./runtest.py
+        - run: cd test/parser && srcml --parser-test testsuite
